--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <meta charset="UTF-8" />
         <title>Flappy bird</title>
         <link rel="stylesheet" href="./style.css" />
+        <link rel="shortcut icon" href="./images/passaro.png" type="image/x-icon">
     </head>
 
     <body>
